--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <div class="ui container">
         <a href="#" class="header item">CattleDog</a>
         <a><%= link_to "Home", "/", class: "item" %></a>
-        <a><%= link_to "Videos", videos_path, class: "item" %></a>
+        <a><%= link_to "Videos", "/", class: "item" %></a>
         <div class="ui simple dropdown item">
           Dropdown <i class="dropdown icon"></i>
           <div class="menu">
