Completed Video components

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,11 @@
   </head>
 
   <body class="bg-gray-800 font-sans leading-normal tracking-normal mt-12">
-    <div class="ui fixed inverted menu">
+    <div class="ui fixed blue inverted menu">
       <div class="ui container">
         <a href="#" class="header item">CattleDog</a>
         <a><%= link_to "Home", "/", class: "item" %></a>
-        <a><%= link_to "Videos", "/", class: "item" %></a>
+        <a><%= link_to "Videos", videos_path, class: "item" %></a>
         <div class="ui simple dropdown item">
           Dropdown <i class="dropdown icon"></i>
           <div class="menu">
