--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
-<%= react_component 'Main' %>
+<div class="ui vertical masthead center aligned segment">
+<div class="pusher">
+  <div class="ui text container">
+    <h1 class="ui header">
+      CattleDog
+    </h1>
+    <h2>Media Cataloguing Application</h2>
+    <p>
+      CattleDog is a media cataloguing application that allows you to record the details of entertainment media items, including movies and TV shows, games, books and music.
+    </p>
+  </div>
+</div>
+</div>
