Applied user authentication

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,10 +4,10 @@
     <h1 class="ui header">
       CattleDog
     </h1>
-    <h2>Media Cataloguing Application</h2>
-    <p>
-      CattleDog is a media cataloguing application that allows you to record the details of entertainment media items, including movies and TV shows, games, books and music.
-    </p>
   </div>
+  <br /><br /><br />
+  <%= link_to 'Login', home_login_path, class: "ui small green button" %>
+  &nbsp;<strong>Or</strong>&nbsp;
+  <%= link_to 'Signup', home_signup_path, class: "ui small blue button" %>
 </div>
 </div>
