--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,25 +17,9 @@
     <div class="ui fixed blue inverted menu">
       <div class="ui container">
         <a href="#" class="header item">CattleDog</a>
-        <a><%= link_to "Home", "/", class: "item" %></a>
-        <a><%= link_to "Videos", videos_path, class: "item" %></a>
-        <div class="ui simple dropdown item">
-          Dropdown <i class="dropdown icon"></i>
-          <div class="menu">
-            <a class="item" href="#">Link Item</a>
-            <a class="item" href="#">Link Item</a>
-            <div class="divider"></div>
-            <div class="header">Header Item</div>
-            <div class="item">
-              <i class="dropdown icon"></i>
-              Sub Menu
-              <div class="menu">
-                <a class="item" href="#">Link Item</a>
-                <a class="item" href="#">Link Item</a>
-              </div>
-            </div>
-            <a class="item" href="#">Link Item</a>
-          </div>
+        <% if logged_in? %><%= render partial: "navigation" %><% end %>
+        <div class="ui right floated item">
+          <%= link_to 'Logout', logout_path, method: :post, class: 'ui white inverted basic small button' %>
         </div>
       </div>
     </div>
