--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -1,3 +1,4 @@
 <a><%= link_to "Home", "/welcome", class: "item" %></a>
 <a><%= link_to "Videos", videos_path, class: "item" %></a>
 <a><%= link_to "Books", books_path, class: "item" %></a>
+<a><%= link_to "Games", games_path, class: "item" %></a>
